# cjm-transcript-segmentation

./: .gitignore  README.md  demo_app.py  html_ids.html  html_ids.html.md  index.html  index.html.md  models.html  models.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  utils.html  utils.html.md
cjm_transcript_segmentation/: _modidx.py  html_ids.py  models.py  utils.py
cjm_transcript_segmentation/components/: callbacks.py  card_stack_config.py  helpers.py  keyboard_config.py  segment_card.py  step_renderer.py
cjm_transcript_segmentation/routes/: card_stack.py  core.py  handlers.py  init.py
cjm_transcript_segmentation/services/: segmentation.py
components/: callbacks.html  callbacks.html.md  card_stack_config.html  card_stack_config.html.md  helpers.html  helpers.html.md  keyboard_config.html  keyboard_config.html.md  segment_card.html  segment_card.html.md  step_renderer.html  step_renderer.html.md
nbs/: html_ids.ipynb  index.ipynb  models.ipynb  nbdev.yml  utils.ipynb
nbs/components/: callbacks.ipynb  card_stack_config.ipynb  helpers.ipynb  keyboard_config.ipynb  segment_card.ipynb  step_renderer.ipynb
nbs/routes/: card_stack.ipynb  core.ipynb  handlers.ipynb  init.ipynb
nbs/services/: segmentation.ipynb
routes/: card_stack.html  card_stack.html.md  core.html  core.html.md  handlers.html  handlers.html.md  init.html  init.html.md
services/: segmentation.html  segmentation.html.md
