[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcript-segmentation"
dynamic = ["version"]
description = "FastHTML text segmentation component for transcript decomposition with NLTK sentence splitting, interactive split/merge UI with token selector, and card stack navigation."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-plugin-system', 'cjm-transcription-plugin-system', 'cjm-fasthtml-app-core', 'cjm-fasthtml-daisyui', 'cjm_fasthtml_lucide_icons', 'cjm_fasthtml_file_browser', 'cjm_fasthtml_keyboard_navigation', 'cjm_fasthtml_card_stack', 'cjm_fasthtml_token_selector', 'duckdb', 'pandas', 'cjm_workflow_state', 'cjm_source_provider', 'cjm_fasthtml_interactions', 'cjm_transcript_source_select', 'cjm_fasthtml_design_system>=0.0.4']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcript-segmentation"
Documentation = "https://cj-mills.github.io/cjm-transcript-segmentation"

[project.entry-points.nbdev]
cjm_transcript_segmentation = "cjm_transcript_segmentation._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcript_segmentation.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcript_segmentation"]

[tool.nbdev]
