[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcript-segmentation"
dynamic = ["version"]
description = "FastHTML text segmentation component for transcript decomposition with NLTK sentence splitting, interactive split/merge UI with token selector, and card stack navigation."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['python-fasthtml', 'cjm-plugin-system>=0.0.30', 'cjm-transcription-plugin-system>=0.0.15', 'cjm-fasthtml-app-core>=0.0.21', 'cjm-fasthtml-daisyui>=0.0.15', 'cjm_fasthtml_lucide_icons>=0.0.1', 'cjm_fasthtml_file_browser>=0.0.24', 'cjm_fasthtml_keyboard_navigation>=0.0.27', 'cjm_fasthtml_card_stack>=0.0.53', 'cjm_fasthtml_token_selector>=0.0.8', 'duckdb', 'pandas', 'cjm_workflow_state>=0.0.3', 'cjm_source_provider>=0.0.1', 'cjm_fasthtml_interactions>=0.0.38', 'cjm_transcript_source_select>=0.0.36', 'cjm_fasthtml_design_system>=0.0.13']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcript-segmentation"
Documentation = "https://cj-mills.github.io/cjm-transcript-segmentation"

[project.entry-points.nbdev]
cjm_transcript_segmentation = "cjm_transcript_segmentation._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcript_segmentation.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcript_segmentation*"]

[tool.nbdev]
